# irs-ros-pkg

./: README.md
arm5e/.svn/: all-wcprops  entries
arm5e/.svn/text-base/: stack.xml.svn-base
arm5e/ARM5Controller/: .project  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
arm5e/ARM5Controller/.svn/: all-wcprops  entries
arm5e/ARM5Controller/.svn/text-base/: manifest.xml.svn-base
arm5e/ARM5Controller/src/: ARM5Control.cpp  ARM5Control.h  ARM5UJIONEComs.cpp
arm5e/ARM5Controller/src/.svn/: all-wcprops  entries
arm5e/ARM5Controller/src/.svn/text-base/: ARM5Coms.h.svn-base
arm5e/ARM5Controller/srv/.svn/: all-wcprops  entries
arm5e/ARM5Controller/srv/.svn/text-base/: setPID.srv.svn-base
arm5e/ARM5Grabber/: CMakeLists.txt  manifest.xml  package.xml
arm5e/ARM5Grabber/src/: main.cc
arm5e/ARM5Init/: CMakeLists.txt  manifest.xml  package.xml
arm5e/ARM5Init/launch/: ARM5Init.launch  ARM5InitNoSlew.launch
arm5e/ARM5Init/src/: arm5_init.cpp
arm5e/ARM5JoyControl/: .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml  package.xml
arm5e/ARM5JoyControl/launch/: ARM5JoyControl.launch  SimARM5JoyCartesianControl.launch
arm5e/ARM5JoyControl/src/: arm5_joy_control.cpp
arm5e/ARM5PowerControl/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
arm5e/ARM5PowerControl/src/: powerClient.cpp  powerServer.cpp
arm5e/arm5_controller/: .cproject  .pydevproject  CMakeLists.txt  package.xml
arm5e/arm5_controller/.svn/text-base/: CMakeLists.txt.svn-base
arm5e/arm5_controller/msg/: ReadMessage.msg  SendMessage.msg
arm5e/arm5_controller/src/: ARM5Coms.cpp  ARM5Coms.h  ARM5Control.cpp  ARM5Control.h  ARM5UJIONEControl.cpp  ARM5UJIONEControl.h
arm5e/arm5_controller/srv/: setOneZero.srv  setParams.srv  setZero.srv
arm5e/arm5_grabber/: CMakeLists.txt  mainpage.dox  package.xml  rosdep.yaml
arm5e/arm5_grabber/launch/: ARM5GrabberRaw.launch  ARM5GrabberUndistort.launch  ARM5GrabberUndistortSubsample.launch  ARM5GrabberV4L.launch  ARM5GrabberV4LUndistortSubsample.launch
arm5e/arm5_init/: CMakeLists.txt  mainpage.dox  package.xml
arm5e/arm5_init/launch/: ARM5InitAuto.launch  ARM5InitAutoNoSlew.launch
arm5e/arm5_init/src/: arm5_init.cpp
arm5e/arm5_joy_control/: .cproject  .project  CMakeLists.txt  mainpage.dox  package.xml
arm5e/arm5_joy_control/launch/: ARM5JoyControl.launch  SimARM5JoyControl.launch  vehicle_joy_control.launch
arm5e/arm5_joy_control/src/: arm5_joy_cartesian_control.cpp  arm5_joy_control.cpp  vehicle_cartesian_control.cpp
arm5e/arm5_power_control/: CMakeLists.txt  package.xml
arm5e/arm5_power_control/src/: powerClient.cpp  powerServer.cpp
arm5e/arm5_power_control/srv/: onOff.srv
arm5e/arm5e/: CMakeLists.txt  package.xml  package.xml~
esm_tracking/: CHANGELOG  CMakeLists.txt  README  mainpage.dox  manifest.xml  package.xml
laser_grasp/: CMakeLists.txt  package.xml
laser_grasp/include/laser_grasp/: best_grasp.h  cloud_registration.h  grasp_planning_filter.h  laser_grasp.h  symmetry.h
laser_grasp/src/: best_grasp.cpp  best_grasp_node.cpp  cloud_registration.cpp  cloud_registration_node.cpp  filter_cloud.cpp  grasp_planning_filter.cpp  grasp_planning_filter_node.cpp  laser_grasp.cpp  laser_grasp_node.cpp  prueba.cpp  ros_to_pcl.cpp  segment_cloud.cpp  solid.cpp  symmetry.cpp  symmetry_node.cpp
mar/: stack.xml
mar/mar/: CMakeLists.txt~  package.xml  package.xml~
mar/mar_action/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mar/mar_action/include/mar_action/: Reconstruction3DAction.h
mar/mar_action/src/: Reconstruction3DAction.cpp
mar/mar_core/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mar/mar_core/include/mar_core/: Arm.h  CAction.h  CPerception.h  CRobot.h
mar/mar_core/src/: Arm.cpp  CAction.cpp  CPerception.cpp  CRobot.cpp
mar/mar_examples/: CMakeLists.txt  package.xml
mar/mar_examples/.svn/: all-wcprops  entries
mar/mar_examples/src/: esm_tracking.cpp  initArm.cpp  (+2 more)
mar/mar_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
mar/mar_perception/: CMakeLists.txt  _package.xml  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
mar/mar_robot/: CMakeLists.txt  index.html  mainpage.dox  manifest.xml  package.xml
mar/mar_robot_arm5e/: .cproject  .project  .pydevproject  CMakeLists.txt  _package.xml  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
mar/mar_ros_bridge/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
omd/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
omd/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
omd/catkin_generated/installspace/: omd.pc  omdConfig.cmake
omd/catkin_generated/stamps/omd/: package.xml.stamp
optoforce/: CMakeLists.txt  CMakeLists.txt~  package.xml
optoforce-ros/omd/: CMakeLists.txt  package.xml
optoforce-ros/optoforce_driver/: CMakeLists.txt  package.xml
optoforce/src/: main.cpp~  mainOptoforce6DSensor.cpp  optoforce6DSensor.cpp  optoforcePublisher.cpp
pruebas_deep_learning/: CMakeLists.txt  package.xml
pruebas_deep_learning/src/: generate_dataset.cpp  generate_models.cpp  rotate_pointcloud.cpp
task_priority/: CMakeLists.txt  package.xml
task_priority/include/task_priority/: controller.hpp  goal.hpp  jacobian.cpp  jacobian.hpp  task.hpp  task_velocity.hpp
task_priority/launch/: multi_task_priority.launch  multi_task_priority.yaml
task_priority/msg/: Error_msg.msg  MultiTask_msg.msg  TaskPriority_msg.msg  Task_msg.msg
task_priority/src/: controller.cpp  goal.cpp  jacobian.cpp  main.cpp  pruebas.cpp  task.cpp  task_velocity.cpp
underwater_grasping/: stack.xml
underwater_grasping/laser_stripe_reconstruction/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
underwater_grasping/pc_guided_grasp_planning/: .CMakeLists.txt.swp  .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
underwater_grasping/underwater_grasping/: CMakeLists.txt  CMakeLists.txt~  package.xml
(+80 files in other folders)
