<package>

  <name>esm_tracking</name>
  <version>0.5.0</version>
  <description> ROS wrapper around the ESM tracking library developed at INRIA Sophia-Antipolis by Selim Benhimane and Ezio Malis </description>
  <author email="marioprats@gmail.com">Mario Prats</author>
  
  <maintainer email="penalvea@uji.es">Toni Peñalver</maintainer>
  <maintainer email="dfornas@uji.es">David Fornas</maintainer>

  <license>BSD</license>

  <url type="website">http://www.irs.uji.es</url>
  <url type="bugtracker">https://github.com/penalvea/irs-ros-pkg/issues</url>
  <url type="repository">https://github.com/penalvea/irs-ros-pkg/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
      <cpp cflags="-I${prefix}/inc`getconf LONG_BIT`" lflags="-L${prefix}/lib`getconf LONG_BIT` -lESMlib"/>
  </export>

</package>


