<package>
  <description>

     ARM5JoyControl

  </description>
  
  <name>ARM5JoyControl</name>
  <version>0.1.0</version>

  <author email="marioprats@gmail.com">Mario Prats</author>
  <maintainer email="penalvea@uji.es">Toni Peñalver</maintainer>
  <license>BSD</license>
  
  <url>http://ros.org/wiki/ARM5JoyControl</url>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>mar_robot_arm5e</build_depend>  
  <build_depend>visp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>mar_robot_arm5e</run_depend>  
  <run_depend>visp</run_depend>

</package>
