<package>
  <description>

     ARM5PowerControl

  </description>
  
  <name>ARM5PowerControl</name>
  <version>0.1.0</version>

  <author>Antonio Peñalver</author>
  <license>BSD</license>
  <maintainer email="dfornas@uji.es">David Fornas</maintainer>

  <url>http://ros.org/wiki/ARM5PowerControl</url>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
