<package>
  <description>

     arm5_grabber

  </description>
  
  <name>arm5_grabber</name>
  <version>0.1.0</version>

  <author email="marioprats@gmail.com">Mario Prats</author>
  <maintainer email="penalvea@uji.es">Toni Peñalver</maintainer>
  <license>BSD</license>
  
  <url>http://ros.org/wiki/arm5_grabber</url>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>image_transport</build_depend>
  <build_depend>ieee1394libraries</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>image_transport</run_depend>
  <run_depend>ieee1394libraries</run_depend>

</package>


