<package>
  <description>

     arm5_init

  </description>
  
  <name>arm5_init</name>
  <version>0.1.0</version>

  <author email="marioprats@gmail.com">Mario Prats</author>
  <maintainer email="penalvea@uji.es">Toni Peñalver</maintainer>
  <license>BSD</license>
  
  <url>http://ros.org/wiki/arm5_init</url>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>arm5_controller</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>arm5_controller</run_depend>

</package>


