<package>
  <description>

     arm5_power_control

  </description>
  
  <name>arm5_power_control</name>
  <version>0.1.0</version>

  <author email="penalvea@uji.es">Toni Peñalver</author>
  <maintainer email="penalvea@uji.es">Toni Peñalver</maintainer>
  <license>BSD</license>
  
  <url>http://ros.org/wiki/arm5_power_control</url>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
