<package>
  <name>arm5e</name>
  <version>0.5.0</version>
  <description> ARM5E Arm control packages </description>
  <author email="marioprats@gmail.com">Mario Prats</author>
  
  <maintainer email="penalvea@uji.es">Toni Peñalver</maintainer>
  <maintainer email="dfornas@uji.es">David Fornas</maintainer>

  <license>BSD</license>

  <url type="website">http://www.irs.uji.es</url>
  <url type="bugtracker">https://github.com/penalvea/irs-ros-pkg/issues</url>
  <url type="repository">https://github.com/penalvea/irs-ros-pkg/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>arm5_controller</run_depend>
  <run_depend>arm5_grabber</run_depend>
  <run_depend>arm5_init</run_depend>
  <run_depend>arm5_joy_control</run_depend>
  <run_depend>arm5_power_control</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
