<package>
  <description>

     mar_action

  </description>
  
  <name>mar_action</name>
  <version>0.1.0</version>

  <author>mprats</author>
  <maintainer email="dfornas@uji.es">David Fornas</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/mar_action</url>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>mar_core</build_depend>
  <build_depend>mar_perception</build_depend>
  
  <run_depend>mar_core</run_depend>
  <run_depend>mar_perception</run_depend>

</package>


